src/objects/Node__c.object
<CustomObject>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <picklist>
            <picklistValues>
                <fullName>AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Node__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Node</label>
        <referenceTo>Node__c</referenceTo>
        <relationshipLabel>Nodes</relationshipLabel>
        <relationshipName>Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Node__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Node</label>
        <referenceTo>Node__c</referenceTo>
        <relationshipLabel>Nodes (Root Node)</relationshipLabel>
        <relationshipName>RootNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Node</label>
    <nameField>
        <displayFormat>G-{000000}</displayFormat>
        <label>Node Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>